@@ -1,3 +1,4 @@
+* Thinning status if the logs are read
 * 2023-10-19, Version 1.21.0
  * Handling of empty Time Machine disks (no backups yet)
 * 2023-10-03, Version 1.20.0
