@@ -1,3 +1,7 @@
+2023-10-23  Matteo Corti  <matteo@corti.li>
+
+        * tmstatus.sh: Thinning status
+
 2023-10-19  Matteo Corti  <matteo@corti.li>
 
         * tmstatus.sh: Handle empty timne machine disks
